        a button, to avoid css conflicts with frontend.css controls styles 

      - 176581: removed Category Filter preview tab, and registered a "dummy"
        public view for this content type

      - 160505: SNN News Publications cannot have addables settings.  It 
        should, being News Publications inherit from Publications.

  2.6.0 beta
  
    New Features

      - working with Zope 2.10 (ala merge 2.4-zope-2.10-branch)

      - registering content via 'silva' zcml directives

      - worked up SilvaNews interfaces a bit

      - Added a SilvaNewsCategoryFilter asset, which can be used
        to limit the category lists in Filters and the properties tool
        in the News Item editor.

      - refactored the viewers, merging shared code

      - Added metadata columns for frequently accessed newsitem data
        (including get_intro!)

      - Refactored News/Agenda viewers:
        1) to use new metadata columns
        2) each of the three public views (standard, archive, search)
           uses a shared macro to render the items, ensuring consisten
           display between all three views.

      - eliminated all calls to getObject() (catalogbrain) in the filters
        -- since it's a "slow" operation, the cases where this was required
           are now using the additional catalog metadata columns.

      - Added rss.xml and atom.xml views, based on the Silva 2.0
        rss.xml Container view.  These use the framework laid out
        for container rss, and include extra tags for silvanews
        specific metadata (location, start,end dates)

      - rss.xml and atom.xml also work for RSSAggregator

      - Removed XMLBuffer, as it is no longer used

      - added interfaces INewsViewer and IAgendaViewer. These interfaces
        can be used by SilvaLayout/Five to provide special views for 
        news/agenda viewers.

      - InlineNewsViewer was updated with some Z3 features, e.g. using the Z3 interface 
        lookup.  
